@@ -1,6 +1,6 @@
 * Noteworthy changes in the upcoming release
 
-New modules: kokkos 3.6.01, kokkos-kernels 3.6.1
+New modules: kokkos 3.6.01, kokkos-kernels 3.6.1, Extra-P 4.0.4.
 
 Updated modules: SuperLU_dist 7.2.0.
 
